# erd_analyzer

./: .gitignore  Makefile  Makefile.am  README.md  README.txt  analysis.sh  colors.txt  configure.ac  csv.c  csv.h  depthfile.c  depthfile.h  depthprofile.c  depthprofile.h  elements.c  elements.h  elements.txt  erd_analyzer.c  plot.c  plot.h  release.sh  rgbcolor.c  rgbcolor.h  round.c  round.h
