bin_PROGRAMS=erd_analyzer
erd_analyzer_SOURCES=erd_analyzer.c depthfile.c depthprofile.c plot.c elements.c round.c rgbcolor.c csv.c erd_analyzer.h depthfile.h depthprofile.h plot.h elements.h round.h rgbcolor.h csv.h
erd_analyzer_CFLAGS= -DDATADIR="${pkgdatadir}"
colordir = $(pkgdatadir)
dist_color_DATA = colors.txt
elementsdir = $(pkgdatadir)
dist_elements_DATA = elements.txt
